--- a/garden.css
+++ b/garden.css
@@ -2,23 +2,103 @@ body {
     font-family: 'Rubik-Light', sans-serif;
 }
 
+#react-holder {
+    position: relative;
+}
+
+.form-wrapper {
+    position: absolute;
+    align-content: center;
+    top: 25%;
+    left: 25%;
+    width: 50%;
+}
+
 .text-input {
-    margin-left: 10px;
-    border: 1px #e8e8e8 solid;
-    border-radius: 3px;
+    width: 100%;
+    height: 296px;
+    border-radius: 8px;
+    border: solid 1px #d0ccd2;
     display: inline-block;
 }
 
 .dropdown {
-    margin-left: 10px;
-    border: 1px #e8e8e8 solid;
-    border-radius: 3px;
     display: inline-block;
+    width: 320px;
+    height: 56px;
+    border-radius: 8px;
+    border: solid 1px #d0ccd2;
+    line-height: 1.5;
+    letter-spacing: normal;
+    color: #16001e;
+    font-size: 16px;
+    font-family: 'Rubik-Light', sans-serif;
+    background-color: #fff;
+    text-align-last: center; /* Does not work outside of chrome */
 }
 
 label {
-    display: inline-block;
-    font-size: 14px;
-    margin-bottom: 10px;
+    display: block;
+    margin-bottom: 16px;
     position: relative;
+    font-family: 'Rubik-Light', sans-serif;
+    font-size: 16px;
+    color: #736678;
+}
+
+.heading-edit {
+    font-family: 'Rubik-Light', sans-serif;
+    font-size: 32px;
+    line-height: 48px;
+    margin-bottom: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.edit-btn {
+    background-color: #fff;
+    border: none;
+    font-size: 25px;
+    color: #ff9748;
+    margin-left: 5px;
+}
+
+.radio-chip  {
+  margin: 0 8px 8px 0;
+}
+
+.radio-chip label {
+    display: inline-block;
+    width: 151px;
+    border-radius: 20px;
+    border: solid 1px #736678;
+    color: #736678;
+    padding: 0.5em;
+    cursor: pointer;
+    text-align: center;
+}
+
+.radio-chip label:hover {
+    background-color: #f7f7f7;
+}
+
+.radio-chip input[type=radio] {
+    display: none;
+}
+
+.radio-chip input[type=radio]:checked ~ label {
+  background-color: #ff9748;
+  color: #fff;
+  border: solid 1px #ff9748;
+}
+
+.radio-chip-group {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.form-element {
+    margin-bottom: 3%;
 }
